# HookLib

./: .gitignore  .gitmodules  CMakeLists.txt  HookLib.sln  LICENSE  README.md
HookLib/: HookLib.vcxproj  HookLib.vcxproj.filters  ZydisPropertySheet.props
HookLib/HookLib/: HookLib.c  HookLib.h
HookLibDrvTests/: HookLibDrvTests.vcxproj  HookLibDrvTests.vcxproj.filters  Main.cpp
HookLibTests/: HookLibTests.cpp  HookLibTests.vcxproj  HookLibTests.vcxproj.filters
props/: HookLib-Km-x32-Debug.props  HookLib-Km-x32-Release.props  HookLib-Km-x64-Debug.props  HookLib-Km-x64-Release.props  HookLib-Um-x32-Debug.props  HookLib-Um-x32-Release.props  HookLib-Um-x64-Debug.props  HookLib-Um-x64-Release.props
